--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@rn-primitives/types": "~1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "expo": "^52.0.25",
     "expo-blur": "^14.0.3",
     "expo-haptics": "^14.0.1",
@@ -47,6 +49,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.19.13",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
