--- a/package.json
+++ b/package.json
@@ -24,21 +24,27 @@
     "@rn-primitives/slot": "~1.1.0",
     "@rn-primitives/tooltip": "~1.1.0",
     "@rn-primitives/types": "~1.1.0",
+    "@vercel/node": "^5.1.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "eas-cli": "^16.3.1",
     "expo": "^52.0.25",
+    "expo-auth-session": "^6.0.3",
     "expo-blur": "^14.0.3",
+    "expo-dev-client": "~5.0.20",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.4",
     "expo-navigation-bar": "~4.0.7",
+    "expo-random": "^14.0.1",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "^14.0.2",
     "lucide-react-native": "^0.378.0",
     "nativewind": "^4.1.23",
     "openai": "^4.93.0",
