--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vercel": "^41.6.0"
   },
   "private": true
 }
