--- a/good-cup-api/package.json
+++ b/good-cup-api/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "dependencies": {
     "@vercel/node": "^3.0.11",
-    "openai": "^4.20.0",
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "openai": "^4.20.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.1",
+    "typescript": "^5.8.3"
   }
 }
