--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.thegoodcup"
     },
     "web": {
       "bundler": "metro",
