--- a/good-cup-api/package.json
+++ b/good-cup-api/package.json
@@ -1,13 +1,30 @@
 {
   "name": "good-cup-api",
   "version": "1.0.0",
+  "scripts": {
+    "start": "vercel dev",
+    "deploy": "vercel"
+  },
   "dependencies": {
+    "@hono/node-server": "^1.14.1",
+    "@neondatabase/serverless": "^1.0.0",
+    "@types/bcryptjs": "^3.0.0",
     "@vercel/node": "^3.0.11",
+    "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.41.0",
+    "hono": "^4.7.6",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^4.20.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
-    "typescript": "^5.8.3"
+    "drizzle-kit": "^0.30.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "vercel": "^41.6.0"
   }
 }
