--- a/good-cup-api/package.json
+++ b/good-cup-api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "vercel dev",
-    "deploy": "vercel"
+    "deploy": "vercel",
+    "dev": "ts-node -r dotenv/config ./server.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
