--- a/good-cup-api/package.json
+++ b/good-cup-api/package.json
@@ -1,12 +1,14 @@
 {
   "name": "good-cup-api",
   "version": "1.0.0",
+  "type": "commonjs",
   "scripts": {
     "start": "vercel dev",
     "deploy": "vercel",
     "dev": "ts-node -r dotenv/config ./server.ts"
   },
   "dependencies": {
+    "@hono/node-server": "^1.14.1",
     "@neondatabase/serverless": "^1.0.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.5.0",
