--- a/good-cup-api/vercel.json
+++ b/good-cup-api/vercel.json
@@ -18,6 +18,7 @@
     { "source": "/brew-suggestions", "destination": "/api/brew-suggestions" },
     { "source": "/brew-suggestion", "destination": "/api/brew-suggestion" },
     { "source": "/generic-brew-suggestion", "destination": "/api/generic-brew-suggestion" },
+    { "source": "/history-suggestion", "destination": "/api/history-suggestion" },
     { "source": "/(.*)", "destination": "/api/$1" }
   ],
   "headers": [
