--- a/good-cup-api/package.json
+++ b/good-cup-api/package.json
@@ -4,7 +4,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "vercel dev",
-    "deploy": "vercel",
+    "deploy": "vercel deploy --prod",
     "dev": "ts-node -r dotenv/config ./server.ts"
   },
   "dependencies": {
