--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.straufprojects.the-good-cup",
+      "bundleIdentifier": "com.anonymous.the-good-cup",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
