--- a/eas.json
+++ b/eas.json
@@ -7,6 +7,9 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
       "environment": "development",
       "env": {
         "EXPO_PUBLIC_API_URL": "https://good-cup-api.vercel.app"
@@ -14,12 +17,18 @@
     },
     "preview": {
       "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
       "environment": "preview",
       "env": {
         "EXPO_PUBLIC_API_URL": "https://good-cup-api.vercel.app"
       }
     },
     "production": {
+      "ios": {
+        "distribution": "store"
+      },
       "autoIncrement": true,
       "environment": "production",
       "env": {
