--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~18.3.12",
+    "dotenv": "^16.5.0",
+    "drizzle-kit": "^0.31.0",
     "typescript": "^5.3.3",
     "vercel": "^41.6.0"
   },
