--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-navigation-bar": "~4.0.7",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.16",
+    "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "^0.2.2",
