--- a/good-cup-api/package.json
+++ b/good-cup-api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "type": "commonjs",
   "scripts": {
-    "start": "vercel dev"
+    "start": "vercel dev",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
