--- a/app.json
+++ b/app.json
@@ -20,7 +20,9 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.straufprojects.thegoodcup",
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSCameraUsageDescription": "This app uses the camera to allow you to capture photos of your coffee beans or brewing setup to attach to your notes.",
+        "NSPhotoLibraryUsageDescription": "This app needs access to your photo library so you can select existing photos of your coffee beans or brewing equipment to add to your notes."
       }
     },
     "android": {
