--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@expo/ngrok": "^4.1.0",
     "@types/react": "~18.3.12",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.0",
