--- a/good-cup-api/vercel.json
+++ b/good-cup-api/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "public": true,
   "functions": {
-    "api/index.ts": {
+    "api/**/*": {
       "memory": 1024,
       "maxDuration": 10
     }
